test/classes/initializers/phase1/setParentField.good
setParentField.chpl:8: In initializer:
setParentField.chpl:9: error: can't set value of field "f1" from parent type during phase 1 of initialization
